Added options page, started search functionality

--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="popup.css">
-<ul>
-	<li><a href="">Search Wikipedia</a></li>
-	<li>Search Thesaurus</li>
-	<li>Search Competitors</li>
+<link rel="stylesheet" href='popup.css'>
+<ul id='searchList'>
+    <form action="" id="competitorSearch">
+        <input type="text" placeholder='Steve Pougnet'>Search Goog</form>
 </ul>
+<script src="popup.js"></script>
+
 </html>
