More search work

--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,9 @@
 <ul id='searchList'>
     <form action="" id="competitorSearch">
         <input type="text" placeholder='Steve Pougnet'>Search Goog</form>
+    <form action="" id='dictionarySearch'>
+        <input type="text" placeholder='gourd'>Search dictionary
+    </form>
 </ul>
 <script src="popup.js"></script>
 
