Started dictionary search

--- a/popup.html
+++ b/popup.html
@@ -4,9 +4,12 @@
 <ul id='searchList'>
     <form action="" id="competitorSearch">
         <input type="text" placeholder='Steve Pougnet'>Search Goog</form>
-    <form action="" id='dictionarySearch'>
+    <!-- <form action="" id='dictionarySearch'>
         <input type="text" placeholder='gourd'>Search dictionary
-    </form>
+    </form> -->
+    <input type="text" id="wordSearch" placeholder="gourd">
+    <button id="dictionarySearch">Search dictionary</button>
+    <li id='test'></li>
 </ul>
 <script src="popup.js"></script>
 
