Added dictionary search functionality

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
     </form> -->
     <input type="text" id="wordSearch" placeholder="gourd">
     <button id="dictionarySearch">Search dictionary</button>
-    <li id='test'></li>
+    <ul id='definitionZone'></li>
 </ul>
 <script src="popup.js"></script>
 
