--- a/options.html
+++ b/options.html
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Journalist's Toolbox Options</title>
-	<style>
-		input: {padding: .5em;}
-	</style>
-</head>
-<body>
-<p>Please enter the competitor news orgnizations you'd like to search below.</p>
-	<label for="competitor1">
-		<input type="text" placeholder='nytimes.com' id='competitor1'>
-	</label>
-	<label for="competitor2">
-		<input type="text" placeholder='cnn.com' id='competitor2'>
-	</label>
-	<label for="competitor3">
-		<input type="text" placeholder='latimes.com' id='competitor3'>
-	</label>
-	<label for="competitor4">
-		<input type="text" placeholder='startribune.com' id='competitor4'>
-	</label>
-	<div id="status"></div>
-	<button id="save">Save</button>
-	<button id="clear">Clear sites</button>
 
-	<script src='options.js'></script>
+<head>
+    <meta charset="UTF-8">
+    <title>Journalist's Toolbox Options</title>
+    <style>
+    body {
+        line-height: 1.3;
+        font-size: 16px;
+    }
+    
+    label {
+        display: block;
+    }
+    button:nth-of-type(even) {
+        float: right;
+    }
+    </style>
+</head>
+
+<body>
+    <p>Please enter up to five news organizations you'd like Journalist's Toolbox to search.</p>
+    <label for="competitor1">Site 1:
+        <input type="text" placeholder='nytimes.com' id='competitor1'>
+    </label>
+    <label for="competitor2">Site 2:
+        <input type="text" placeholder='cnn.com' id='competitor2'>
+    </label>
+    <label for="competitor3">Site 3:
+        <input type="text" placeholder='latimes.com' id='competitor3'>
+    </label>
+    <label for="competitor4">Site 4:
+        <input type="text" placeholder='startribune.com' id='competitor4'>
+    </label>
+    <label for="competitor4">Site 5:
+        <input type="text" placeholder='mprnews.org' id='competitor5'>
+    </label>
+    <div id="status"></div>
+    <button id="save">Save</button>
+    <button id="clear">Clear sites</button>
+    <script src='options.js'></script>
 </body>
+
 </html>
