Changed popup wording

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
         <input type="text" placeholder='Steve Pougnet'>
     </form>
 <!--     <button id="searchGoogle">Search</button> -->
-    <label for="wordSearch">Search a word:</label>
+    <label for="wordSearch">Search for a definition / synonym:</label>
     <input type="text" id="wordSearch" placeholder="Gourd">
     <button id="dictionarySearch">Definition</button>
     <button id="thesaurusSearch">Synonyms</button>
