Tweaks + added installation welcome page

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 <!--     <button id="searchGoogle">Search</button> -->
     <label for="wordSearch">Search for a definition / synonym:</label>
     <input type="text" id="wordSearch" placeholder="Gourd">
-    <button id="dictionarySearch">Definition</button>
+    <button id="dictionarySearch">Definitions</button>
     <button id="thesaurusSearch">Synonyms</button>
     <button id="options">Options</button>
     <ul id='definitionZone'>
