Code tweaks, created icons

--- a/installpage.html
+++ b/installpage.html
@@ -3,10 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Thank You for installing Journalist's Toolbox</title>
+	<title>Thank You for installing Swiss Army Notebook</title>
+	<style>
+		body{
+			font-family: Arial;
+			font-size: 17px;
+			margin: 0 auto;
+			width: 60%;
+		}
+		h5{
+			font-size: 110%;
+		}
+	</style>
 </head>
 <body>
-	<h3>Hi! Thanks for using Journalist's toolbox.</h3>
+	<h2>Hi! Thanks for using Swiss Army Notebook.</h2>
     <p>This extension is designed to make life easier for reporters. Here's what it does:</p>
 
     <h5>Search competitors' sites</h5>
