Added screenshots, example gifs and readme

--- a/options.html
+++ b/options.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>Swiss Army Notebook Options</title>
@@ -14,6 +13,13 @@
     label {
         display: block;
         font-weight: bold;
+        margin: 1em 0;
+    }
+
+    #status{
+    	font-weight: bold;
+    	text-align: center;
+    	font-size: 130%;
     }
     
     button {
