--- a/installpage.html
+++ b/installpage.html
@@ -9,10 +9,16 @@
 			font-family: Arial;
 			font-size: 17px;
 			margin: 0 auto;
-			width: 60%;
+			width: 70%;
 		}
 		h5{
 			font-size: 110%;
+		}
+		img{
+			display: block;
+			margin: 0 auto;
+			max-height: auto;
+			max-width: 85%;
 		}
 	</style>
 </head>
@@ -22,16 +28,17 @@
 
     <h5>Search competitors' sites</h5>
 	<p>Finding stories your competitors have written can be a pain without access to their archives. The extension stores up to five competitor sites for you, letting you run a custom Google search <em>just on those sites</em> at any time.</p>
-    <p>To use the site search feature, click on the extension icon in the top-right corner of your browser, then click "Options." Add in your sites, then click save. Then just enter your search term(s) into the text field and click enter.</p>
-	<p>GIF</p>
-	<p>You can change the competitor sites you want to search at any time.</p>
+    <p>To use the site search feature, click on the extension icon in the top-right corner of your browser, then click "Options." Add in your sites, then click save. To search, click on the extension icon, put your search term(s) in the text field and hit enter.</p>
+	<img src="search2.gif" alt="search illustration">
+	<p>The extension remembers the sites you choose, so you only have to set them once. You can change the competitor sites you want to search at any time.</p>
 
 	<h5>Quick dictionary + thesaurus</h5>
 	<p>I can't even begin to count the number of times I opened up thesaurus.com when I worked as a reporter. With this extension, you don't have to. Enter your search term and click "Definitions" or "Synonyms." That's it.</p>
+	<img src="dictionary.gif" alt="dictionary illustration">
 
 	<h5>Social media shortcuts</h5>
-	<p>This extension binds a few new keyboard shortcuts to Chrome. Press Alt+T to open Twitter, Alt+B for Facebook and Alt+G for Gmail.</p>
-
+	<p>This extension binds a few new keyboard shortcuts to Chrome. Press Alt+T to open Twitter, Alt+B for Facebook and Alt+G for Gmail in new tabs.</p>
+	<img src="shortcuts.gif" alt="shortcuts illustration">
 	<h5>Thank you</h5>
 	<p>Reporters are the most important people on the planet, and I hope this extension makes your life a little easier. If you run into any bugs, please <a href="mailto:kfarhang0@gmail.com" title="Email Kia Farhang">email me</a> so I can fix them. You can also <a href="https://paypal.me/KiaFarhang/3" title="Donate to Kia Farhang" title="_blank">make a small donation</a> if you're so inclined. I'll never do a pledge drive.</p>
 
